<resources>
    <string name="app_name">Price Comparison</string>

    <!--SelectMode-->
    <string name="selectmode_btn1">God Mode</string>
    <string name="selectmode_btn2">User Mode</string>

    <!--GodMode-->
    <string name="main_btn1">Skaner</string>
    <string name="main_btn2">Baza danych</string>
    <string name="main_btn3">Znajdź najtaniej</string>
    <string name="main_toolbar_name">GodMode</string>

    <!--Database-->
    <string name="database_toolbar_name">Baza danych</string>

    <!--Scanner-->
    <string name="scanner_toolbar_name">Skaner</string>
    <!--Scanner Edit List Item-->
    <string name="scanner_edit_item_toolbar_name">Edycja Itemu</string>
    <!--Scaner Menu-->
    <string name="scanner_menu_opt1">Wyczyść listę</string>
    <string name="scanner_menu_opt2">Opcja nr2</string>

    <!--FindCheapest-->
    <string name="find_cheapest_btn1">Zeskanuj kod kreskowy</string>
    <string name="find_cheapest_toolbar_name">Znajdź najtaniej</string>

    <!--User Mode-->
    <string name="user_mode_text1">Największa porównywarka \n cen sklepowych</string>
    <string name="user_mode_text2">Zeskanuj kod kreskowy</string>

    <!--Scanned Product-->
    <string name="scanned_product_toolbar">Skanuj produkty</string>
    <string name="contentDescription_add_to_cart">Add to cart</string>
    <string name="scanned_product">Produkt</string>
    <string name="scanned_product_background">Tło</string>
    <string name="scanned_product_panel1_title">Najtaniej w:</string>

    <!--Cart-->
    <string name="cart_toolbar_name">Koszyk</string>


</resources>
